# antlr-project

./: .clang-format  .gitignore  CMakeLists.txt  Koda.g4  KodaTokens.g4  alias.sh  build.sh  debug.sh  fmt.sh  input.txt  main.cpp  main.g4  main.py  run.sh  setup.sh  test_koda  test_koda.cpp
koda_src/: arithmetic.cpp  koda_scope.cpp  koda_types.cpp  koda_values.cpp
koda_src/arithmetic/: _add.cpp  _div.cpp  _mul.cpp  _sub.cpp  execute.cpp  main.cpp
koda_src/arithmetic/digit/: add.cpp  div.cpp  fld.cpp  mod.cpp  mul.cpp  pow.cpp  sub.cpp
koda_src/operators/: execute.cpp  visitor_base.cpp
koda_src/operators/arithmetic/: arith_add.cpp  arith_div.cpp  arith_fld.cpp  arith_mod.cpp  arith_mul.cpp  arith_pow.cpp  arith_sub.cpp
koda_src/operators/bitwise/: bw_and.cpp  bw_lshift.cpp  bw_or.cpp  bw_rshift.cpp  bw_xor.cpp
koda_src/operators/logical/: logic_eq.cpp  logic_ge.cpp  logic_gt.cpp  logic_le.cpp  logic_lt.cpp  logic_neq.cpp
koda_src/operators/single/: bw_not.cpp  logic_not.cpp
src/: scope.cpp
src/ast/: ast_node.h  ast_visitor.cpp  generate_ast.cpp
src/exec/: exec.cpp
src/exec/op/: add.cpp  div.cpp  mul.cpp  sub.cpp
src/parsing/: visitor.cpp
src/types/: object.h
src/types/std/: bool.h  int64.h  void.h
src/typing/: atom.h  kind.h  not_implemented.h  object.h  order.h  scope.cpp  subtype.h
src/typing/operations/: type_eq.h
src/typing/operators/: eq.cpp
src/typing/std/: bool.h  float.h  func.h  int64.h  string.h  void.h
src/util/: operate.cpp
